integration_tests/codegen_fail/fail/enum/derive_variant_with_field.rs
#[derive(juniper::GraphQLEnum)]
enum Test {
    Variant(i32),
}

fn main() {}
